create containers for grid and buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <div class="grid"></div>
+    <div class="configurations">
+        <button class="size">Set Grid Size</button>
+        <button class="erase">Eraser</button>
+    </div>
 </body>
 </html>
