--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="grid"></div>
     <div class="configurations">
         <button class="size">Set Grid Size</button>
+        <button class="pen">Pen</button>
         <button class="erase">Eraser</button>
+        <button class="clear">Clear Grid</button>
     </div>
 </body>
 </html>
